@@ -3791,6 +3791,7 @@ retry:
 			else
 			{
 				t->resume();
+				if (!t->should_check_files()) continue;
 				t->start_checking();
 				--limit;
 			}
@@ -7127,7 +7128,9 @@ retry:
 		TORRENT_ASSERT(is_single_thread());
 
 		int loaded_limit = m_settings.get_int(settings_pack::active_loaded_limit);
-		TORRENT_ASSERT(m_num_save_resume <= loaded_limit);
+		TORRENT_ASSERT(loaded_limit == 0
+			|| !m_user_load_torrent
+			|| m_num_save_resume <= loaded_limit);
 //		if (m_num_save_resume < loaded_limit)
 //			TORRENT_ASSERT(m_save_resume_queue.empty());
 
